.kustomize/media/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: authentik
  name: arr-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.josephang.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 80
  - host: radarr.josephang.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
  - host: sonarr.josephang.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80
  # - host: lidarr.josephang.space
  #   http:
  #     paths:
  #     - path: "/"
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: lidarr
  #           port:
  #             number: 80
