.kustomize/media/resources/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: sonarr-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.kopi.quest
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80
